--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -32,7 +32,9 @@
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/arrow_right"
         android:text="@string/next_button"
+        android:drawablePadding="4dp"
         />
 </LinearLayout>
 
