--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button"/>
     </LinearLayout>
+
     <Button
         android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
@@ -49,6 +50,13 @@
         android:layout_gravity="bottom|right"
         android:src="@drawable/arrow_right"
         />
+
+    <TextView
+        android:id="@+id/api_level_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:layout_gravity="right|center_vertical"/>
 
 </FrameLayout>
 
