--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -53,5 +53,10 @@
         android:src="@drawable/arrow_right"
         />
     </LinearLayout>
+    <TextView
+        android:id="@+id/api_level_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"/>
 </LinearLayout>
 
